syntax = "proto3";
package tigeropen.push.pb;

import "SocketCommon.proto";



message QuoteData {

  string symbol = 1;
  SocketCommon.QuoteType type = 2; // ALL/BASIC/BBO
  uint64 timestamp = 3;
  uint64 serverTimestamp = 4;
  double avgPrice = 5; // Options data not support
  double latestPrice = 6; // required when type is 'BASIC'
  uint64 latestPriceTimestamp = 7; // required when type is 'BASIC', Pre/Post-Mkt data not support
  string latestTime = 8; // required when type is 'BASIC'
  double preClose = 9; // required when type is 'BASIC'
  sint64 volume = 10; // required when type is 'BASIC'
  double amount = 11; // required when type is 'BASIC', Futures and Options data not support

  double open = 12; // required when symbol in HK market
  double high = 13; // required when symbol in HK market
  double low = 14; // required when symbol in HK market

  string hourTradingTag = 15; // Pre/Post-Mkt
  string marketStatus = 16;

  double askPrice = 17; // required when type is 'BBO'
  sint64 askSize = 18; // required when type is 'BBO'
  uint64 askTimestamp = 19; // Pre/Post-Mkt data not support
  double bidPrice = 20; // required when type is 'BBO'
  sint64 bidSize = 21; // required when type is 'BBO'
  uint64 bidTimestamp = 22; // Pre/Post-Mkt data not support

  string identifier = 23; // only Options support
  sint64 openInt = 24; // open interest, only Options support

  uint64 tradeTime = 25; // latest trad time, only Futures support
  double preSettlement = 26; // previous settlement price, only Futures support
  float minTick = 27; // min tick, only Futures support

  // minute data: price, average price, time, volume
  Minute mi = 28;

  message Minute {
    double p = 1; // last price of the minute bar
    double a = 2; // average price of the minute bar
    uint64 t = 3; // timestamp of the minute bar
    sint64 v = 4; // trading volume of the minute bar
    double o = 5; // open price of the minute bar
    double h = 6; // highest price of the minute bar
    double l = 7; // lowest price of the minute bar
  }
}